--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
             </div>
 
             <div class="shot">
-              <img src="./images/screen_list.png" alt="Stations list">
+              <img src="./images/screen_search.png" alt="Stations list">
               <div class="caption">Stations</div>
             </div>
 
             <div class="shot">
-              <img src="./images/screen_player.png" alt="Now Playing screen">
+              <img src="./images/screen_now_playing.png" alt="Now Playing screen">
               <div class="caption">Now Playing</div>
             </div>
           </div>
